{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 7,
  "lineage": "e9dea50e-6ba6-6d5f-69cb-3e468cb33fba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112921198:internet-gateway/igw-056cd01e4dcc0873d",
            "id": "igw-056cd01e4dcc0873d",
            "owner_id": "471112921198",
            "tags": {
              "Name": "terraform-vpc-igw"
            },
            "tags_all": {
              "Name": "terraform-vpc-igw"
            },
            "vpc_id": "vpc-0f51ac3aa4f180de6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "entry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-056cd01e4dcc0873d",
            "id": "r-rtb-03ccdb07d0fde68ed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03ccdb07d0fde68ed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-vpc-igw",
            "aws_route_table.terraform-pub-sub-rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-pub-sub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112921198:route-table/rtb-03ccdb07d0fde68ed",
            "id": "rtb-03ccdb07d0fde68ed",
            "owner_id": "471112921198",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-pub-sub-rt"
            },
            "tags_all": {
              "Name": "terraform-pub-sub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f51ac3aa4f180de6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b866b48fad78a9d",
            "route_table_id": "rtb-03ccdb07d0fde68ed",
            "subnet_id": "subnet-0714087ee97d1edc4"
          },
          "dependencies": [
            "aws_route_table.terraform-pub-sub-rt",
            "aws_subnet.public-sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112921198:subnet/subnet-0714087ee97d1edc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0714087ee97d1edc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112921198",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-sub-terraform-vpc-01"
            },
            "tags_all": {
              "Name": "public-sub-terraform-vpc-01"
            },
            "vpc_id": "vpc-0f51ac3aa4f180de6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112921198:vpc/vpc-0f51ac3aa4f180de6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-044c5f3bfac4e7d7c",
            "default_route_table_id": "rtb-0f9243c3ee92c54fa",
            "default_security_group_id": "sg-0380fa06bdbbc0575",
            "dhcp_options_id": "dopt-016d8521a97e0557b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f51ac3aa4f180de6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f9243c3ee92c54fa",
            "owner_id": "471112921198",
            "tags": {
              "Name": "fusion-terraform-vpc"
            },
            "tags_all": {
              "Name": "fusion-terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}